manager/tests/sim/snapshots/sim__test_scenarios__memory_pressure_relief.snap
---
source: manager/tests/sim/test_scenarios.rs
expression: formatted
---
kv.evict_sliding:
  - 0
  - 0.003
  - -0.006
  - -0.003
  - -0.001
  - 0
