manager/tests/sim/snapshots/sim__test_scenarios__partition_contention_relief.snap
---
source: manager/tests/sim/test_scenarios.rs
expression: formatted
---
set_partition_ratio:
  - 0
  - -0.001
  - -0.001
  - -0.002
  - -0.128
  - 0
