manager/tests/sim/snapshots/sim__test_scenarios__s25_memory_pressure_general_relief.snap
---
source: manager/tests/sim/test_scenarios.rs
expression: formatted
---
kv.evict_h2o:
  - 0.051
  - -0
  - 0.196
  - 0.048
  - 0.001
  - 0
kv.evict_sliding:
  - 0.067
  - -0
  - 0.197
  - 0.065
  - -0.002
  - 0
kv.merge_d2o:
  - 0.067
  - 0.001
  - 0.198
  - 0.073
  - -0
  - 0
kv.quant_dynamic:
  - 0
  - 0.004
  - 0.141
  - 0.002
  - 0.001
  - 0
