manager/tests/sim/snapshots/sim__test_scenarios__s25_memory_pressure_general_summary.snap
---
source: manager/tests/sim/test_scenarios.rs
expression: summary
---
duration_s: 30
heartbeat_count: 30
signal_count_by_kind:
  compute_guidance: 120
  energy_constraint: 15
  memory_pressure: 60
  thermal_alert: 30
directive_count: 4
directive_kinds:
  KvEvictH2o: 1
  KvEvictSliding: 1
  KvMergeD2o: 1
  KvQuantDynamic: 1
first_directive_at_s: 7.5
state_final:
  kv_cache_bytes_mib: 830.23
  device_memory_used_mb: 11326.9
  engine_cpu_pct: 30
  engine_gpu_pct: 65
  cpu_freq_ratio: 1
  gpu_freq_ratio: 1
  thermal_c: 36
  throughput_tps: 16.65
