manager/tests/sim/snapshots/sim__test_scenarios__thermal_ramp_summary.snap
---
source: manager/tests/sim/test_scenarios.rs
expression: summary
---
duration_s: 30
heartbeat_count: 30
signal_count_by_kind:
  compute_guidance: 120
  energy_constraint: 15
  memory_pressure: 60
  thermal_alert: 30
directive_count: 2
directive_kinds:
  SwitchHw: 1
  Throttle: 2
first_directive_at_s: 1
state_final:
  kv_cache_bytes_mib: 2.8
  device_memory_used_mb: 3500
  engine_cpu_pct: 85
  engine_gpu_pct: 5.3
  cpu_freq_ratio: 1
  gpu_freq_ratio: 1
  thermal_c: 68
  throughput_tps: 0.2
